--- a/index.css
+++ b/index.css
@@ -2,20 +2,46 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
+    min-width: 320px;
 }
 
 p {
     margin: 0;
 }
 
+/*Top div that contains image*/
+
 .headerDiv {
     margin: 0 auto;
-    width: 70%;
+    width: 80%;
+    height: 38rem;
 }
 
-.headerImage {
+#image {
     width: 100%;
-    height: 40rem;
+    height: 100%;
+    object-fit: cover;
+}
+
+#button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.color-button {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 5px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+/*Elements below the header*/
+
+.body-section {
+    margin-top: 3rem;
 }
 
 .bodyInfo {
@@ -25,6 +51,8 @@ p {
     justify-content: space-between;
     align-items: center;
 }
+
+/*Left side of the body*/
 
 .text {
     width: 60%;
@@ -40,13 +68,15 @@ p {
     margin-bottom: 0.25rem;
 }
 
+/*Small box on lower right corner css*/
+
 .buyingInfo {
+    margin-top: 2rem;
     height: 3.5rem;
     width: 27%;
     padding: 0.5rem;
     display: flex;
     justify-content: space-between;
-
     border: 0.1rem solid black;
     border-radius: 0.5rem;
 }
@@ -64,4 +94,69 @@ p {
     color: white;
     padding: 0.5rem 1.5rem;
     border-radius: 0.5rem;
+}
+
+/*pop up css*/
+.popup {
+    position: absolute;
+    display: none;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+    top: 30rem;
+    transform: translateX(-50%);
+    height: 10rem;
+    width: 31rem;
+}
+
+.popup-visible {
+    display: block;
+}
+
+.pop-up-img {
+    width: 10rem;
+    height: 10rem;
+}
+.color-button {
+    width: 2rem;
+    height: 2rem;
+}
+@media screen and (max-width: 830px) {
+    .bodyInfo {
+        flex-direction: column;
+        width: 80%;
+        margin-top: 3rem;
+    }
+
+    .text {
+        order: 1;
+        margin-top: 1rem;
+        width: 100%;
+    }
+
+    .buyingInfo {
+        order: 0;
+        margin-top: 1rem;
+        width: 13rem;
+    }
+
+    .popup {
+        top: 15rem;
+        height: fit-content;
+        width: 24.8rem;
+    }
+
+    .pop-up-img {
+        width: 8rem;
+        height: 8rem;
+    }
+
+    .body-section {
+        margin-top: 1rem;
+    }
+
+    .headerDiv {
+        height: 20rem;
+    }
 }
